components/com_answers/assets/css/answers.css
/**
 * @package     hubzero-cms
 * @file        components/com_answers/answers.css
 * @copyright   Copyright 2005-2011 Purdue University. All rights reserved.
 * @license     http://www.gnu.org/licenses/lgpl-3.0.html LGPLv3
 */

/*

	-- -- -- -- -- -- --
	com_answers CSS
	-- -- -- -- -- -- --

*/

/* Entries (list) */
	ul.answers,
	ul.questions {
		list-style: none;
		margin: 1em 0;
	}
	.answers li,
	.questions li {
		background-image: none;
		padding: 0px 0.4em;
	}
	ul.answers li,
	ul.questions li {
		padding: 0 0 0 17px;
		margin: 0.3em 0;
		background: url("/components/com_answers/assets/img/bullets_medium.gif") no-repeat 0px -133px;
	}
	ul.answers li {
		background: url("/components/com_answers/assets/img/bullets_medium.gif") no-repeat 0px -442px;
	}
	.entries .list-footer li {
		background-image: none;
	}
/* Entries */
	.entry-state {
		text-transform: uppercase;
	}
	.entry-comments {
		padding-right: 16px;
		background: url("/components/com_answers/assets/img/bullets_small.png") no-repeat right -428px;
	}
	.entries .reward {
		text-align: right;
	}

	.entry-date-at, 
	.entry-date-on {
		visibility: visible;
		display: inline;
	}

	.entries .entry-id {
		display: none;
	}
	.questions tbody th {
		background: url("/components/com_answers/assets/img/question.png") right 15px no-repeat;
	}
	.questions tbody tr.answered th {
		background: url("/components/com_answers/assets/img/question_answered.png") right 15px no-repeat;
	}
	.questions tbody tr.flagged th {
		background: url("/components/com_answers/assets/img/question_answered.png") right 15px no-repeat;
	}
	.questions tbody tr.answered {
		background: #fcf9ff url("/components/com_answers/assets/img/light-stripes.png");
	}
	.questions tbody tr.mine {
		background: #ffe url("/components/com_answers/assets/img/light-stripes.png");
	}
	.questions tbody tr.flagged {
		background: #FFF2EF url("/components/com_answers/assets/img/light-stripes.png");
	}
	/*.entries tbody td.voting,
	.voting {
		text-align: right;
		white-space: nowrap;
	}*/
	p.voting {
		float: right;
		min-width: 10em;
		margin: 0.7em 0 0.7em 0;
		padding: 0;
	}
	.container-block .entry-details {
		padding: 0.7em 0 0.7em 0;
	}
	.entry-popularity {
		display: none;
	}
/* Submenu styling 
	.container .filter-options li {
		float: left;
	}*/
	.filter-options li {
		float: left;
		margin: 0;
	}
	.user-options + .container {
		margin-top: 0;
	}
	.user-options li {
		display: inline;
		margin: 0 0.5em 0 0;
	}
	.user-options li a {
		display: inline-block;
		background: #fff;
		color: #888;
		cursor: pointer;
		font-weight: normal;
		line-height: 1em;
		border: none;
		margin: 0;
		padding: 0.75em 1em;
		text-shadow: 0px 1px 1px #fff;
		border: 1px solid #e9e9e9;
		border-bottom: none;
	}
	.user-options li a:hover {
		color: #fff;
		background-color: #666;
		border-color: #666;
		text-shadow: 0 1px 1px rgba(0,0,0,.3);
		text-decoration: none;
	}
	.user-options li a.active,
	.user-options li a.active:hover {
		background: #ececec;
		border: 1px solid #ececec;
		border-bottom: none;
		color: #333;
	}
/* Rewards */
	.entry-reward {
		white-space: nowrap;
		color: #999;
		font-size: 85%;
	}
	.entry-reward a {
		background: url("/components/com_answers/assets/img/coin.gif") 0 0 no-repeat;
		width: 16px;
		height: 16px;
		display: inline-block;
		overflow: hidden;
		text-indent: 55em;
	}
/* Answer form */
	#answerform fieldset {
		padding: 0 1em 1em 1em;
		border: none;
		float: left;
		background: #FFFDEF;
		border: 1px solid #EFEAC2;
		color: #906C59;
		width:80%;
	}
	#answerform label {
		display: block;
		padding-top: 1.5em;
	}
	#answerform input, 
	#answerform select, 
	#answerform textarea {
		margin-top: 0.25em;
		width: 100%;
	}
	#answerform .option {
		display: inline;
		margin: 0 0.25em 0 0 !important;
		margin: 0;
		width: auto;
	}
	#answerform .submit {
		text-align: right;
		clear: both;
		margin-right: 40%;
		padding-top: 1em;
	}
	#answerform .submit input {
		width: auto;
		margin: 0;
	}
/* Introduction columns */
	.pointvalue a, 
	.questions .rewardset a {
		background: url("/components/com_answers/assets/img/coin.gif") 0 0  no-repeat;
		margin: 0;
		padding: 0;
		border: none;
		display: inline-block;	
		width: 16px;
		height: 16px;
		overflow: hidden;
		text-indent: -55em;
	}
	.pointvalue a:hover {
		border: none;	
	}
	.pointvalue  {
		color: #000;
		font-weight:bold;
		text-transform: lowercase;
		font-size: inherit;	
		padding: 0;
	}
/* Accept the answer */
	.accept a {
		background: url("/components/com_answers/assets/img/checker.gif") 0 0 no-repeat;
		padding: 0.2em 0 0.4em 1.3em;
		margin:0;
		height:15px;
		font-size: inherit;	
		border: none;	
	}
	.accept a:hover {
		background-position: 0 -20px;
		padding: 0.2em 0 0.4em 1.3em;
		margin:0;
	}
	.open {
		text-transform: uppercase;
		letter-spacing: 1px;
		color:#006600;
		font-size:x-small;
		font-weight:bold;
	}
	.closed {
		text-transform: uppercase;
		letter-spacing: 1px;
		color: #000;
		font-size:x-small;
		font-weight:bold;
	}
	.underreview {
		text-transform: uppercase;
		letter-spacing: 1px;
		color:#990000;
		font-size:x-small;
		font-weight:bold;
	}
	.sidenote {
		margin-top: 4em;
		padding: 0 0 0 2em;
	}
/* Abuse button */
	.abuseitem {
		padding: 10px 10px 10px 30px; 
		margin: 0 0 3em 0;
		text-align: left;
		border: 1px solid #EFCCC2; 
		background: #FFF2EF;
	}
	.abuseitem h4 {
		margin: 0;
		font-style: italic;
	}
	.abuseitem p {
		margin: 0.5em 0 0.5em 0;
	}
/* Misc. */
	.supplemental {
		line-height: 2em;
		padding: 0;
		margin: 0;
	}
	.filters {
		background: #f3f3f3;
		border-top: 1px solid #ccc;
		border-bottom: 1px solid #ccc;
		padding: 0.5em;
		margin-top: 0.5em;
	}
	.questions .tags { 
		margin-top:-2.5em;
	}
/* Question */
	.entry .entry-subject {
		font-weight: bold;
	}
	/* Voting */
	.question .question-voting {
		float:right; 
	}
	.question .question-voting .question_vote {
		margin: 0 0 0 1em;
		color: #666;
	}
	.question .question-voting .question_vote a,
	.question .question-voting .question_vote a.voted {
		border: none;
		width: 19px;
		height: 19px;
		display: inline-block;
		margin: 0;
		padding: 0 0 3px 0;
		color: #bfbfbf;
		overflow: hidden;
		text-indent: -55em;
	}
	.question .question-voting .question_vote a.voted {
		background: url("/components/com_answers/assets/img/thumbup_ok.gif") 0 0 no-repeat;
	}
	.question .question-voting .question_vote a {
		background: url("/components/com_answers/assets/img/thumbup.gif") 0 0 no-repeat;
		height: 15px;	
	}
	.question .question-voting .question_vote a:hover {
		background-position: 0 -32px;
		color: #000;
	}
/* Misc. */
	.youcanearn {
		display:block;
		margin-top:1em;
		margin-right:2em;
		font-size:x-small;
		font-style:italic;
		font-weight:600;
		line-height:1.2em;
	}
	#useroptions li {
		white-space:nowrap; 
		overflow:visible;
	}
	.subtitle {
		margin: -1em 1.5em 1.5em 1.3em;
		font-weight:normal;
	}
	.spacer {
		padding:0 1em 0 1em;
	}
	.myquestions {
		background: transparent url("/components/com_answers/assets/img/myquestions.png") 0 0 no-repeat; padding-left: 18px;padding-bottom:0.2em; 
		margin-left:-1.5em;
		margin-right:-0.5em;
	}
	.note_total {
		font-size: x-small;
		color: #666;
		float: right;
		text-align: right;
		margin-top: -8px;
		margin-bottom: -2em;
	}
	.subject-wrap {
		margin: 0 0 0 70px;
		padding: 0;
	}
/* Point breakdown */
	#pointbreakdown {
		font-size: 85%;
		border-bottom: none;
		margin-bottom: 4em;
	}
	#pointbreakdown caption {
		font-weight: bold;
	}
	#pointbreakdown tbody td,
	#pointbreakdown tbody th {
		border-top: 1px solid #efefef;
		border-bottom: 1px solid #efefef;
	}
	#pointbreakdown tfoot td {
		border-top: 2px solid #efefef;
		color: #aaa;
	}
/* Answer button */
	.aside .answer-question {
		margin-top: 0;
		padding-top: 0;
	}
	.answer-question a {
		display: block;
		width: 100%;
		vertical-align: baseline;
		margin: 0;
		outline: none;
		cursor: pointer;
		text-align: center;
		text-decoration: none;
		padding: 0 1em;
		text-shadow: 0 1px 1px rgba(0,0,0,.3);
		-webkit-border-radius: 0.25em; 
		-moz-border-radius: 0.25em;
		border-radius: 0.25em;
		-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
		-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
		box-shadow: 0 1px 2px rgba(0,0,0,.2);
		color: #fff;
	}
	.answer-question a {
		font-size: 1.1em;
		padding: 0.4em 0 0.42em 0;
		border: solid 1px #538312;
		background: #64991e;
		background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
		background: -moz-linear-gradient(top,  #7db72f,  #4e7d0e);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db72f', endColorstr='#4e7d0e');
	}
	.answer-question a:hover {
		background: #538018;
		background: -webkit-gradient(linear, left top, left bottom, from(#6b9d28), to(#436b0c));
		background: -moz-linear-gradient(top,  #6b9d28,  #436b0c);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b9d28', endColorstr='#436b0c');
	}
	.answer-question a:active {
		color: #a9c08c;
		background: -webkit-gradient(linear, left top, left bottom, from(#4e7d0e), to(#7db72f));
		background: -moz-linear-gradient(top,  #4e7d0e,  #7db72f);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#4e7d0e', endColorstr='#7db72f');
	}
/* Delete button */
	#deleteForm .submit input,
	#deleteForm .submit a {
		display: inline-block;
		zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
		*display: inline;
		vertical-align: baseline;
		margin: 0;
		outline: none;
		cursor: pointer;
		text-align: center;
		text-decoration: none;
		padding: 0 1em;
		text-shadow: 0 1px 1px rgba(0,0,0,.3);
		-webkit-border-radius: 0.5em; 
		-moz-border-radius: 0.5em;
		border-radius: 0.5em;
		-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
		-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
		box-shadow: 0 1px 2px rgba(0,0,0,.2);
		color: #fff;
	}
	#deleteForm .submit input {
		font-size: 1.1em;
		padding: 0.4em 1.5em 0.42em;
		border: solid 1px #538312;
		background: #64991e;
		background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
		background: -moz-linear-gradient(top,  #7db72f,  #4e7d0e);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db72f', endColorstr='#4e7d0e');
	}
	#deleteForm .submit input:hover {
		background: #538018;
		background: -webkit-gradient(linear, left top, left bottom, from(#6b9d28), to(#436b0c));
		background: -moz-linear-gradient(top,  #6b9d28,  #436b0c);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b9d28', endColorstr='#436b0c');
	}
	#deleteForm .submit input:active {
		color: #a9c08c;
		background: -webkit-gradient(linear, left top, left bottom, from(#4e7d0e), to(#7db72f));
		background: -moz-linear-gradient(top,  #4e7d0e,  #7db72f);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#4e7d0e', endColorstr='#7db72f');
	}
	#deleteForm .submit a {
		font-size: 85%;
		margin: 0 0 0 2em;
		border: solid 1px #b73948;
		background: #da5867;
		background: -webkit-gradient(linear, left top, left bottom, from(#f16c7c), to(#bf404f));
		background: -moz-linear-gradient(top,  #f16c7c,  #bf404f);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f16c7c', endColorstr='#bf404f');
	}
	#deleteForm .submit a:hover {
		border: solid 1px #b73948;
		text-decoration: none;
		background: #ba4b58;
		background: -webkit-gradient(linear, left top, left bottom, from(#cf5d6a), to(#a53845));
		background: -moz-linear-gradient(top,  #cf5d6a,  #a53845);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#cf5d6a', endColorstr='#a53845');
	}
	#deleteForm .submit a:active {
		position: relative;
		top: 1px;
		color: #dca4ab;
		background: -webkit-gradient(linear, left top, left bottom, from(#bf404f), to(#f16c7c));
		background: -moz-linear-gradient(top,  #bf404f,  #f16c7c);
		filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#bf404f', endColorstr='#f16c7c');
	}

